[FIX] workaround gcc10: view + std::filesystem:path constructor = bad

https://gcc.gnu.org/bugzilla/show_bug.cgi?id=93983 has the consequences
that a view with a custom constructor of std::filesystem::path produces
an infinite loop.