doc/tutorial/read_mapper/read_mapper_step2.cpp
@@ -50,7 +50,11 @@ void map_reads(std::filesystem::path const & query_path,
     seqan3::configuration const search_config = seqan3::search_cfg::max_error{seqan3::search_cfg::total{errors}} |
                                                 seqan3::search_cfg::hit_all_best;
 
+#if SEQAN3_WORKAROUND_GCC_93983
+    for (auto && record : query_file_in /*| seqan3::views::take(20)*/)
+#else // ^^^ workaround / no workaround vvv
     for (auto && record : query_file_in | seqan3::views::take(20))
+#endif // SEQAN3_WORKAROUND_GCC_93983
     {
         seqan3::debug_stream << "Hits:" << '\n';
         for (auto && result : search(seqan3::get<seqan3::field::seq>(record), index, search_config))
