doc/tutorial/sequence_file/sequence_file_solution5.cpp
@@ -66,6 +66,7 @@ write_file_dummy_struct go{};
 
 int main()
 {
+#if !SEQAN3_WORKAROUND_GCC_93983
     std::filesystem::path tmp_dir = std::filesystem::temp_directory_path(); // get the temp directory
 
     seqan3::sequence_file_input fin{tmp_dir/"my.fastq"};
@@ -80,5 +81,6 @@ int main()
 
     // This would also work:
     // fin | length_filter | fout;
+#endif // !SEQAN3_WORKAROUND_GCC_93983
 }
 //![solution]
