test/snippet/io/sequence_file/sequence_file_output_view_pipeline.cpp
@@ -21,6 +21,7 @@ GGAGTATAATATATATATATATAT
 
 int main()
 {
+#if !SEQAN3_WORKAROUND_GCC_93983
     using seqan3::get;
 
     // minimum_average_quality_filter and minimum_sequence_length_filter need to be implemented first
@@ -45,4 +46,5 @@ int main()
         | minimum_sequence_length_filter
         | std::views::take(3)
         | seqan3::sequence_file_output{std::ostringstream{}, seqan3::format_fasta{}};
+#endif // !SEQAN3_WORKAROUND_GCC_93983
 }
