test/snippet/io/structure_file/structure_file_input_filter_criteria.cpp
@@ -18,11 +18,17 @@ int main()
 
     seqan3::structure_file_input fin{std::istringstream{input}, seqan3::format_vienna{}};
 
+#if !SEQAN3_WORKAROUND_GCC_93983
     auto minimum_length5_filter = std::views::filter([] (auto const & rec)
     {
         return std::ranges::size(get<seqan3::field::seq>(rec)) >= 5;
     });
+#endif // !SEQAN3_WORKAROUND_GCC_93983
 
+#if SEQAN3_WORKAROUND_GCC_93983
+    for (auto & rec : fin /*| minimum_length5_filter*/) // only record with sequence length >= 5 will "appear"
+#else // ^^^ workaround / no workaround vvv
     for (auto & rec : fin | minimum_length5_filter) // only record with sequence length >= 5 will "appear"
+#endif // SEQAN3_WORKAROUND_GCC_93983
         seqan3::debug_stream << (get<0>(rec) | seqan3::views::to_char) << '\n';
 }
