test/snippet/io/structure_file/structure_file_output_pipeline.cpp
@@ -13,6 +13,8 @@ UUGGAGUACACAACCUGUACACUCUUUC
 
 int main()
 {
+#if !SEQAN3_WORKAROUND_GCC_93983
     seqan3::structure_file_input my_in{std::istringstream{input}, seqan3::format_vienna{}};
     my_in | seqan3::views::take(2) | seqan3::structure_file_output{std::ostringstream{}, seqan3::format_vienna{}};
+#endif // !SEQAN3_WORKAROUND_GCC_93983
 }
