test/unit/io/structure_file/structure_file_input_test.cpp
@@ -363,13 +363,19 @@ TEST_F(structure_file_input_read, record_file_view)
                                                     seqan3::field::structure,
                                                     seqan3::field::energy>{}};
 
+#if !SEQAN3_WORKAROUND_GCC_93983
     auto minimum_length_filter = std::views::filter([] (auto const & rec)
     {
         return size(seqan3::get<seqan3::field::seq>(rec)) >= 5;
     });
+#endif
 
     size_t counter = 0ul; // the first record will be filtered out
+#if SEQAN3_WORKAROUND_GCC_93983
+    for (auto & rec : fin /*| minimum_length_filter*/)
+#else // ^^^ workaround / no workaround vvv
     for (auto & rec : fin | minimum_length_filter)
+#endif // SEQAN3_WORKAROUND_GCC_93983
     {
         EXPECT_TRUE((std::ranges::equal(seqan3::get<seqan3::field::seq>(rec), seq_comp[counter])));
         EXPECT_TRUE((std::ranges::equal(seqan3::get<seqan3::field::id>(rec),  id_comp[counter])));
